Mon Feb 16 14:26:02 2015  Jiri (George) Lebl <jirka@5z.com>

	* examples/fourier-series-plotting.gel: Replace the hand coded
	  graph with more general code that can be used to show fourier
	  series for more functions

Fri Feb 13 11:46:57 2015  Jiri (George) Lebl <jirka@5z.com>

	* gtkextra/*.c: remove the inline from roundint.  Probably not
	  a performance bottleneck to begin with and likely the
	  compiler will inline by itself hopefully.  Removes compilation
	  errors with GCC5

Fri Jan 09 18:19:44 2015  Jiri (George) Lebl <jirka@5z.com>

	* examples/eulers-method-graphs-exp.gel: present plot window after
	  each plot so that the console doesn't keep popping up

Fri Oct 10 17:16:38 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c: min/max now check their arguments better, especially
	  if argument is a single element.

	* src/geniustests.txt: Add a bunch of tests to the suite

	* help/C/genius.xml: A bunch of updates to the manual

Fri Oct 10 16:05:24 2014  Jiri (George) Lebl <jirka@5z.com>

	* lib/calculus/fourier.gel: Fix PeriodicExtension

	* src/geniustests.txt: add a bunch of tests for the periodic
	  extensions stuff

Fri Oct 10 15:13:16 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.desktop.in: Add GTK Category, and add Keywords

Mon Oct 06 13:08:52 2014  Jiri (George) Lebl <jirka@5z.com>

	* pixmaps/*: add scaled 8x8 and 16x16 scaled versions of the icon,
	  by slightly tweaking gimps scaling of the icon.

Thu Oct 02 23:28:29 2014  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml: slight update

Thu Oct 02 19:34:55 2014  Jiri (George) Lebl <jirka@5z.com>

	* help/C/figures/*.png, help/C/genius.xml: requantize and recompress
	  some of the images to save space.  Then update the docs on the GUI
	  a little more.

Thu Oct 02 18:34:13 2014  Jiri (George) Lebl <jirka@5z.com>

	* help/C/figures/*.png, help/C/genius.xml: Update the manual a bit
	  and create new figures since the old screenshots were out of date.